--- a/styles/styles.css
+++ b/styles/styles.css
@@ -529,15 +529,15 @@ header {
     justify-content: space-evenly;
     align-items: center;
     position: absolute;
-    width: 56vw;
-    aspect-ratio: 1 / 1.3;
+    width: 54vw;
+    aspect-ratio: 1 / 1.35;
 
     > *:not(:first-child) {
         margin-bottom: min(2.4vw, 1.7rem);
     }
 
     & h2 {
-        font-size: min(9.5vw, 3.9rem);
+        font-size: min(10vw, 4.2rem);
         font-weight: 400;
     }
 
@@ -553,7 +553,7 @@ header {
 
     & p {
         font-weight: 300;
-        font-size: min(6.3vw, 2.55rem);
+        font-size: min(7.2vw, 2.55rem);
         text-wrap: wrap;
     }
 
@@ -561,8 +561,8 @@ header {
         text-decoration: none;
         color: var(--gray-font-color);
         background-color: white;
-        padding: max(2.4vw, 10px) max(2.8vw, 12px);
-        font-size: min(4vw, 1.2rem);
+        padding: min(2.2vw, 20px) min(4.9vw, 36px);
+        font-size: min(4.9vw, 1.3rem);
         border: none;
         border-radius: 4px;
     }
