--- a/styles/styles.css
+++ b/styles/styles.css
@@ -719,8 +719,8 @@ header {
     justify-content: space-evenly;
     align-items: center;
     position: absolute;
-    gap: 1rem;
-    width: min(77vw, 31rem);
+    gap: 4vw;
+    width: min(94vw, 31rem);
     aspect-ratio: 2 / 1;
 
     & br:last-child {
@@ -728,7 +728,7 @@ header {
     }
 
     & h2 {
-        font-size: min(8vw, 3.9rem);
+        font-size: min(9.5vw, 3.9rem);
         font-weight: 500;
     }
 
@@ -749,7 +749,7 @@ header {
     }
 
     & p {
-        font-size: min(4vw, 1.55rem);
+        font-size: min(4.5vw, 1.55rem);
         text-align: center;
         line-height: 1.4;
     }
@@ -758,7 +758,7 @@ header {
         text-decoration: none;
         background-color: var(--btn-1-color);
         padding: min(2.4vw, 14.5px) min(2.8vw, 25.5px);
-        font-size: min(3.2vw, 1.2rem);
+        font-size: min(3.4vw, 1.2rem);
         border: none;
         border-radius: 4px;
     }
