--- a/styles/styles.css
+++ b/styles/styles.css
@@ -699,7 +699,7 @@ header {
 ======================================
 */
 
-/* STYLES FOR ALL NEW HERO IMAGE */
+/* STYLES FOR OUR STORY IMAGE */
 
 .our-story {
     display: flex;
@@ -711,7 +711,7 @@ header {
     }
 }
 
-/* STYLES FOR ALL NEW HERO IMAGE CARD */
+/* STYLES FOR OUR STORY IMAGE CARD */
 
 .our-story-card {
     display: flex;
@@ -720,15 +720,15 @@ header {
     align-items: center;
     position: absolute;
     gap: 4vw;
-    width: min(94vw, 31rem);
-    aspect-ratio: 2 / 1;
+    width: min(92vw, 31.5rem);
+    aspect-ratio: 1 / 1;
 
-    & br:last-child {
+    & br {
         display: none;
     }
 
     & h2 {
-        font-size: min(9.5vw, 3.9rem);
+        font-size: min(13vw, 4.5rem);
         font-weight: 500;
     }
 
@@ -749,7 +749,7 @@ header {
     }
 
     & p {
-        font-size: min(4.5vw, 1.55rem);
+        font-size: min(6.5vw, 2.2rem);
         text-align: center;
         line-height: 1.4;
     }
@@ -757,16 +757,46 @@ header {
     & a {
         text-decoration: none;
         background-color: var(--btn-1-color);
-        padding: min(2.4vw, 14.5px) min(2.8vw, 25.5px);
-        font-size: min(3.4vw, 1.2rem);
+        padding: min(2.4vw, 14.5px) min(3.8vw, 22.5px);
+        font-size: min(4.8vw, 1.2rem);
         border: none;
         border-radius: 4px;
     }
 }
 
-/* STYLES FOR DESKTOP ALL NEW HERO CARD */
+/* STYLES FOR TABLET OUR STORY CARD */
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 38em) {
+    .our-story-card {
+        justify-content: center;
+        gap: 2vw;
+        width: min(95vw, 52.5rem);
+        height: 17.8rem;
+
+        & br {
+            display: block;
+        }
+
+        & h2 {
+            font-size: min(8vw, 4.5rem);
+            margin: -16px 0 12px;
+        }
+
+        p {
+            font-size: min(4vw, 2.2rem);
+            margin-bottom: 1.4rem;
+        }
+
+        & a {
+            font-size: min(3vw, 1.6rem);
+            margin-bottom: 1.1rem;
+        }
+    }
+}
+
+/* STYLES FOR DESKTOP OUR STORY CARD */
+
+@media screen and (min-width: 64em) {
     .our-story-card {
         justify-content: center;
         gap: 0.5rem;
@@ -774,13 +804,13 @@ header {
         width: min(69vw, 42.5rem);
         height: 17.8rem;
 
-        & br:last-child {
+        & br {
             display: block;
         }
 
         & h2 {
             font-size: min(6vw, 3.9rem);
-            margin: -16px 0 12px;
+            margin: -16px 0 15px;
         }
 
         p {
