Update top link to be the width of its content to prevent accidental clicks to the top

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1007,6 +1007,7 @@ main {
     text-decoration: none;
     font-weight: 500;
     margin-bottom: 3.188rem;
+    width: fit-content;
 }
 
 /* STYLES FOR ROUND CONTACT LINK ICONS */
