--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,11 @@ header {
 
 @media screen and (min-width: 63.125em) {
     header {
-        padding: 13px 20px;
+        padding: 0 20px;
+
+        & .audioengine-logo {
+            padding: 13px 0;
+        }
     }
 }
 
@@ -95,11 +99,23 @@ header {
     gap: 2.7rem;
     list-style-type: none;
 
+    & li {
+        height: 60px;
+    }
+
     & a {
+        display: flex;
+        align-items: center;
+        height: 100%;
         color: white;
         text-decoration: none;
         text-transform: uppercase;
         font-size: 1.2rem;
+    }
+
+    & a:hover {
+        color: black;
+        background-color: white;
     }
 }
 
